// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Shift-reset > multiple shifts within reset > invoking continuations 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?6",
    "?2 ~~ ?3",
    "?6 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num
?6 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "10",
      ],
      "7": [
        "20",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> $k 10)",
      "7": "shift (λ$k -> $k 20)",
    },
  },
  "term": "let test
	: Num
	= reset |+ ?5 ?7|",
  "type": "Num",
}
`;

exports[`Shift-reset > multiple shifts within reset > multiple shifts and multiple resumptions 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ Num",
    "Num ~~ ?6",
    "?2 ~~ ?3",
    "?6 ~~ Num",
    "Num ~~ Num",
    "Num ~~ ?8",
    "?2 ~~ ?8",
    "?2 ~~ ?3",
    "?8 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num
?6 |=> Num
?8 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "3",
      ],
      "7": [
        "2",
      ],
      "9": [
        "L1 1",
        "1",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> $k 3)",
      "7": "shift (λ$k -> $k 2)",
      "9": "shift (λ$k -> $k ($k 1))",
    },
  },
  "term": "let test
	: Num
	= reset |+ (+ (+ 4 ?5) ?7) ?9|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > invoking id continuation 1`] = `
{
  "constraints": [
    "String ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> String
?2 |=> String
?3 |=> String
?4 |=> String",
  "state": {
    "nondeterminism": {
      "5": [
        ""hello"",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> $k "hello")",
    },
  },
  "term": "let test
	: String
	= reset |?5|",
  "type": "String",
}
`;

exports[`Shift-reset > only one shift within reset > invoking simple continuation with proper value 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "1",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> $k 1)",
    },
  },
  "term": "let test
	: Num
	= reset |+ 1 ?5|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > multiple k applications 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ Num",
    "Num ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "2",
        "1",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> + ($k 1) ($k 2))",
    },
  },
  "term": "let test
	: Num
	= reset |?5|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > multiple resumptions 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ Num",
    "Num ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "2",
        "1",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> + ($k 1) ($k 2))",
    },
  },
  "term": "let test
	: Num
	= reset |?5|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > nested resumption 1`] = `
{
  "constraints": [
    "Num ~~ ?4",
    "?2 ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "L1 10",
        "10",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> $k ($k 10))",
    },
  },
  "term": "let test
	: Num
	= reset |?5|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > nested resumption with non-id continuation 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "Num ~~ ?4",
    "?2 ~~ ?4",
    "?2 ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num
?4 |=> Num",
  "state": {
    "nondeterminism": {
      "5": [
        "L1 10",
        "10",
      ],
    },
    "skolems": {
      "5": "shift (λ$k -> $k ($k 10))",
    },
  },
  "term": "let test
	: Num
	= reset |+ 1 ?5|",
  "type": "Num",
}
`;

exports[`Shift-reset > only one shift within reset > not invoking continuation 1`] = `
{
  "constraints": [
    "String ~~ ?3",
    "?4 ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> String
?3 |=> String
?4 |=> ?2",
  "state": {
    "nondeterminism": {},
    "skolems": {
      "5": "shift (λ$k -> "world")",
    },
  },
  "term": "let test
	: String
	= reset |?5|",
  "type": "String",
}
`;

exports[`Shift-reset > only one shift within reset > overriding continuation return type 1`] = `
{
  "constraints": [
    "Num ~~ Num",
    "String ~~ ?3",
    "?4 ~~ Num",
    "Num ~~ ?2",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> String
?2 |=> Num
?3 |=> String
?4 |=> Num",
  "state": {
    "nondeterminism": {},
    "skolems": {
      "5": "shift (λ$k -> "hello")",
    },
  },
  "term": "let test
	: String
	= reset |+ 1 ?5|",
  "type": "String",
}
`;

exports[`Shift-reset > resets without shifts > literal value 1`] = `
{
  "constraints": [
    "Num ~~ ?2",
    "?2 ~~ ?3",
    "?3 ~~ ?1",
  ],
  "solution": "?1 |=> Num
?2 |=> Num
?3 |=> Num",
  "state": {
    "nondeterminism": {},
    "skolems": {},
  },
  "term": "let test
	: Num
	= reset |10|",
  "type": "Num",
}
`;
